[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/5228055c3a0be6380d900f3321d7a206-blue-marble-ball-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/playerCamera.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.99998
height = 8.00002

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.99999
height = 8.00002

[sub_resource type="CapsuleShape2D" id=7]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 1.0
height = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18, 15 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18, 7 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 9.0
height = 16.0

[node name="player" type="KinematicBody2D" groups=["player"]]
light_mask = 2
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="playerCamera" parent="sprite" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floorArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="floorArea"]
position = Vector2( 0, 13 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="floorAreaCheck" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="floorAreaCheck"]
position = Vector2( 0, 13 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.501
one_shot = true

[node name="zTimer" type="Timer" parent="Timer"]
wait_time = 0.2
one_shot = true

[node name="bufferJumpTimer" type="Timer" parent="Timer"]
wait_time = 0.3
one_shot = true

[node name="coyoteTimer" type="Timer" parent="Timer"]
wait_time = 0.1
one_shot = true

[node name="saveStandArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="saveStandArea"]
position = Vector2( 0, 11 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="frontArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="frontArea"]
position = Vector2( 0, 31 )
shape = SubResource( 5 )

[node name="backArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="backArea"]
position = Vector2( 0, -6 )
shape = SubResource( 6 )

[node name="jumpCancelTween" type="Tween" parent="."]

[node name="checkPointArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="checkPointCollision" type="CollisionShape2D" parent="checkPointArea"]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/zTimer" to="." method="_on_zTimer_timeout"]
[connection signal="timeout" from="Timer/bufferJumpTimer" to="." method="_on_bufferJumpTimer_timeout"]
[connection signal="timeout" from="Timer/coyoteTimer" to="." method="_on_coyoteTimer_timeout"]
